modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ auto: true
 pygments: true
 paginate: 10
 
+# From https://help.github.com/articles/using-jekyll-with-pages#troubleshooting
+safe: true
+lsi: false
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
