`category` can only be string in liquid 2.4.1
Got:
Liquid Exception: private method `gsub' called for ["BioInformatics", "analyse"]:Array in post

So, all category changed from Array to single.

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ permalink: /:categories/:year:month:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
+
+# added by Galaxy
 paginate: 10
 
 # From https://help.github.com/articles/using-jekyll-with-pages#troubleshooting
