--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://galaxy001.github.io
+production_url : https://galaxy001.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
